--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>photo search via API App</title>
     <script type="module" src="./app.js"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="image-app"></div>
     <div id="collections"></div>
+    <div id="photos"></div>
   </body>
 </html>
